refactor: improve code readability and compiler options in build configuration